--- a/src/isaw/bibitems/static/bibitems.css
+++ b/src/isaw/bibitems/static/bibitems.css
@@ -1,13 +1,11 @@
 button.BibInfoFetchButton {
-	height: 2em;
 	padding: 5px;
 	margin-left: 10px;
 }
 
 button.BibInfoFetchButton span {
-	display: none;
 }
 
-button.BibInfoFetchButton:after {
+button.BibInfoFetchButton:before {
 	content: "\1F50D";
 }
