--- a/src/isaw/bibitems/static/bibitems.css
+++ b/src/isaw/bibitems/static/bibitems.css
@@ -14,7 +14,9 @@ button.BibInfoFetchButton:before {
     margin-bottom: 1em;
     clear: both;
     overflow: hidden;
-    text-align: center;
+    text-align: left;
+    padding-left: 4em;
+    text-indent: -4em;
     font-size: 120%;
 }
 
